Refactor : made some changes for image to display on page load

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,13 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Fira+Code&family=Montserrat&family=Noto+Sans+SC&family=Nunito&family=Open+Sans&family=Poppins&family=Roboto+Mono&family=Source+Sans+Pro&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
 * {
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font: inherit;
   vertical-align: baseline;
   scroll-behavior: smooth;
-  font-family: 'Fira Code', monospace;
+  font-family: 'Inter', sans-serif;
 }
 
 body {
@@ -20,28 +19,15 @@ body {
 }
 
 body .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 body .container header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
   position: absolute;
   top: 0;
   left: 0;
@@ -55,16 +41,9 @@ body .container header .logo-container svg {
 }
 
 body .container header nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  align-items: center;
+  flex-direction: row;
   background: #EB5757;
   padding: 30px 10px;
   border-radius: 5px;
@@ -92,33 +71,20 @@ body .container header nav ul li a:hover {
 }
 
 body .container header .cart-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  align-items: center;
+  flex-direction: row;
 }
 
 body .container header .cart-container button {
   font-size: 14px;
   line-height: 18px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   background: 0 0;
   border: 0;
   cursor: pointer;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   padding: 0;
   outline: none;
 }
@@ -130,24 +96,16 @@ body .container header .cart-container .last-header-btn {
 body .container .body-img-container {
   max-width: 500px;
   min-width: 500px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   overflow: hidden;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  flex-direction: row;
 }
 
 body .container .body-img-container .image-box {
   height: 100vh;
   overflow: hidden;
   min-width: 100%;
-  -webkit-transition: linear 400ms;
   transition: linear 400ms;
 }
 
@@ -155,16 +113,12 @@ body .container .body-img-container .image-box .main-image {
   display: block;
   height: 100vh;
   width: 100%;
-  -webkit-transition: linear 400ms;
   transition: linear 400ms;
 }
 
 body .container .body-text-container {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  font-style: normal;
-  font-weight: bold;
+  flex-grow: 1;
+  font-weight: 500;
   font-size: 50px;
   line-height: 80px;
   position: relative;
@@ -187,56 +141,33 @@ body .container .bottom-container {
   position: absolute;
   bottom: 0;
   right: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
   width: 67%;
 }
 
 body .container .bottom-container .con {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 body .container .bottom-container .con .btn-footer-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   margin-right: 130px;
 }
 
 body .container .bottom-container .con .btn-footer-container button {
   font-size: 14px;
   line-height: 18px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   background: 0 0;
   border: 0;
   cursor: pointer;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   padding: 0;
   outline: none;
   background: #FFFFFF;
@@ -246,12 +177,8 @@ body .container .bottom-container .con .btn-footer-container button {
 }
 
 body .container .bottom-container .con .social-link-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 body .container .bottom-container .con .social-link-container .footer-ul {
@@ -273,17 +200,10 @@ body .container .bottom-container .con .social-link-container .footer-ul li a {
 body .container .bottom-container .footer-scroll {
   min-height: 250px;
   background-color: #EB5757;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   padding: 20px 30px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   display: block;
 }
 
