--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Montserrat&family=Noto+Sans+SC&family=Nunito&family=Open+Sans&family=Poppins&family=Roboto+Mono&family=Source+Sans+Pro&display=swap');
-
+// @import url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Montserrat&family=Noto+Sans+SC&family=Nunito&family=Open+Sans&family=Poppins&family=Roboto+Mono&family=Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 
 @mixin button-container {
@@ -44,7 +44,8 @@
     font: inherit;
     vertical-align: baseline;
     scroll-behavior: smooth;
-    font-family: 'Fira Code', monospace; 
+    // font-family: 'Fira Code', monospace; 
+    font-family: 'Inter', sans-serif;
 }
 
 body {
@@ -166,13 +167,11 @@ body {
 
         .body-text-container {
             flex-grow: 1;
-            font-style: normal;
-            font-weight: bold;
+            // font-style: normal;
+            font-weight: 500;
             font-size: 50px;
             line-height: 80px;
             position: relative;
-            
-            
             
             color: #EB5757;
 
